--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>JavaScript Chatbot</title>
 
     <!-- css file link -->
-    <link rel="stylesheet" href="./Chatbot/style.css">
+    <link rel="stylesheet" href="Chatbot/style.css">
 
     <!-- font awesome icon cdn-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -49,6 +49,6 @@
     </div>
 
     <!-- js file  -->
-    <script src="./Chatbot/js.js"></script>
+    <script src="Chatbot/js.js"></script>
 </body>
 </html>
