--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
             <button id="init">START CHAT</button>
         </div>
         <div>
-            <img src="chatbot.png" alt="" class="bot-img">
+            <img src="/Chatbot/chatbot.png" alt="" class="bot-img">
         </div>
     </div>
     <div id="test" style="position: fixed;top: 4rem;right: 8rem;display: none;">
         <div class="child" id="chatbot">
             <div class="header">
                 <div class="h-child">
-                    <img src="chatbot (1).png" alt="avatar" id="avatar">
+                    <img src="chatbot/chatbot (1).png" alt="avatar" id="avatar">
                     <div>
                         <span class="name">Chatbot</span>
                         <br>
