--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="parent">
         <div class="desc">
-            <h1 class="text">JavaScript Chatbot</h1>
+            <h1 class="text">Chatbot</h1>
             <p>Chatbots are conversational tools that perform routine tasks efficiently. People like them because they help them get through those tasks quickly so they can focus their attention on high-level, strategic, and engaging activities that require human capabilities that cannot be replicated by machines.</p>
             <button id="init">START CHAT</button>
         </div>
